--- a/src/index.css
+++ b/src/index.css
@@ -38,4 +38,108 @@ span {
   background-color: #380060;
   color: white;
   padding: 20px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Space Grotesk", sans-serif
+}
+.footer .logo {
+  font-size:30px;
+  text-decoration: none;
+  padding: 10px 0;
+  color:white;
+}
+.footer h3 {
+  padding-bottom:20px;
+}
+.footer .footer-links {
+  display:flex;
+  flex-wrap:wrap;
+  padding-bottom:10px;
+}
+.footer .footer-links a {
+  text-decoration: none;
+  padding: 0 10px;
+  font-size:18px;
+  color:white;
+  transition: 0.3s;
+}
+.footer .footer-links a:hover {
+  color:#9103f6;
+}
+.footer .social-links {
+  display:flex;
+  gap:20px;
+  font-size: 30px;
+  padding:12px 0 ;
+  cursor:pointer;
+}
+.footer .social-links > * {
+  transition: 0.3s;
+  text-decoration:none;
+  color:white;
+}
+.footer .social-links > *:hover  {
+    color:#9103f6;
+}
+
+.navbar {
+  width:100%;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+.nav-links {
+  width: 60%;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #380060;
+  border-bottom-left-radius: 40px;
+  border-bottom-right-radius: 40px;
+  z-index:2;
+}
+.nav-links a {
+  padding: 10px 30px;
+  font-size: 18px;
+  font-family: "Space Grotesk", sans-serif;
+  text-decoration: none;
+  color: white;
+  transition: 0.3s  ;
+}
+.nav-links a:hover {
+  color: #9103f6;
+}
+.nav-links a.logo {
+  font-size:28px;
+}
+
+
+.sidebar-nav {
+  width:100%;
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+  padding:10px 50px;
+}
+.sidebar-nav a {
+  text-decoration:none;
+  font-size:22px;
+  color:var(--primary-color);
+  font-family:"Space Grotesk", sans-serif;
+  z-index:999
+}
+.sidebar-nav .sidebar-menu {
+  cursor:pointer;
+  transition: 0.3s;
+}
+.sidebar-nav .sidebar-menu {
+  color: #380060;
+}
+
+@media (max-width: 420px) {
+  .sidebar-nav {
+    padding: 10px;
+  }
 }
