--- a/src/css/Homepage.css
+++ b/src/css/Homepage.css
@@ -15,7 +15,7 @@
 
 .wave-desktop {
     position: absolute;
-    bottom: -1px;
+    bottom: 0px;
     left: 0;
     width: 100%;
     z-index: 0;
@@ -148,7 +148,7 @@
     width: 100%;
     z-index: 0;
     position: absolute;
-    top:-1px;
+    top: -1px;
 }
 
 .servicessection .services-card-container {
@@ -241,7 +241,7 @@
     gap: 20px;
     max-width: 1200px;
     margin: 0 auto;
-    padding:10px;
+    padding: 10px;
 }
 
 .portfolio-image {
@@ -333,7 +333,7 @@
 
 .contact-small {
     margin-top: 120px;
-    z-index:5;
+    z-index: 5;
 }
 
 .contact-small h1 {
@@ -354,7 +354,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    flex-wrap:wrap;
+    flex-wrap: wrap;
 }
 
 .contact-small .contact-small-container a {
@@ -380,37 +380,44 @@
 
 /* Responsive Adjustments */
 @media (max-width: 1100px) {
-   .contact-small .contact-small-container {
-        padding:20px;
+    .contact-small .contact-small-container {
+        padding: 20px;
     }
+
     .aboutsection {
-        padding:20px;
+        padding: 20px;
     }
 }
+
 @media (max-width: 940px) {
     .nav-links {
-        width:90%;
+        width: 90%;
     }
+
     .hero-section .hero-content h1 {
-        font-size:100px;
-        text-align:center;
+        font-size: 100px;
+        text-align: center;
     }
 }
+
 @media (max-width: 900px) {
     .portfolio-card-container {
         grid-template-columns: 1fr;
-        padding:20px;
+        padding: 20px;
     }
-   .servicessection  .services-card-container {
-        padding:20px;
+
+    .servicessection .services-card-container {
+        padding: 20px;
     }
 }
+
 @media (max-width: 740px) {
     .aboutsection .aboutsection-left h3 {
-        font-size:18px;
+        font-size: 18px;
     }
+
     .aboutsection .aboutsection-right a.about-link {
-        font-size:18px;
+        font-size: 18px;
     }
 }
 
@@ -418,70 +425,107 @@
     .hero-section .hero-content h1 {
         font-size: 70px;
     }
+
     .hero-section .hero-content h2 {
-        font-size:22px;
+        font-size: 22px;
     }
+
     .nav-links {
-        display:none;
+        display: none;
     }
+
     .aboutsection {
         flex-direction: column;
     }
+
     .aboutsection .aboutsection-left {
         justify-content: center;
     }
-    .servicessection .services h1, .portfolioSection h1, .testimonialsSection h1, .contact-small h1 {
-        font-size:50px;
+
+    .servicessection .services h1,
+    .portfolioSection h1,
+    .testimonialsSection h1,
+    .contact-small h1 {
+        font-size: 50px;
     }
-    .servicessection .services h2, .portfolioSection h2, .testimonialsSection h2, .contact-small h2  {
-        font-size:18px;
+
+    .servicessection .services h2,
+    .portfolioSection h2,
+    .testimonialsSection h2,
+    .contact-small h2 {
+        font-size: 18px;
         padding: 0 5px;
     }
 
 }
+
 @media (max-width: 420px) {
     .hero-section {
         height: 80vh;
     }
+
     .hero-section .hero-content {
-        padding:10px;
+        padding: 10px;
     }
+
     .hero-section .hero-content h1 {
-        font-size:60px;
+        font-size: 60px;
     }
+
     .hero-section .hero-content h2 {
         font-size: 18px;
         padding: 10px;
     }
+
     .hero-section .hero-content .actions {
-        margin: 10px 0 ;
+        margin: 10px 0;
     }
-    .hero-section .hero-content .actions button, .portfolioSection button {
-        font-size:16px;
+
+    .hero-section .hero-content .actions button,
+    .portfolioSection button {
+        font-size: 16px;
         padding: 10px;
     }
-    .servicessection .services h1, .portfolioSection h1, .testimonialsSection h1, .contact-small h1 {
-        font-size:40px;
+
+    .servicessection .services h1,
+    .portfolioSection h1,
+    .testimonialsSection h1,
+    .contact-small h1 {
+        font-size: 40px;
     }
-    .servicessection .services h2, .portfolioSection h2, .testimonialsSection h2, .contact-small h2 {
-        font-size:16px;
+
+    .servicessection .services h2,
+    .portfolioSection h2,
+    .testimonialsSection h2,
+    .contact-small h2 {
+        font-size: 16px;
     }
-    .servicessection  .services-card-container {
-        padding:10px 5px;
+
+    .servicessection .services-card-container {
+        padding: 10px 5px;
     }
-    .servicessection  .services-card-container .services-card {
-        width:100%;
+
+    .servicessection .services-card-container .services-card {
+        width: 100%;
     }
+
     .servicessection button {
-        font-size:16px;
+        font-size: 16px;
     }
+
     .testimonials-container {
-        padding:5px;
+        padding: 5px;
     }
+
     .testimonialsSection h2 {
-        padding-top:10px;
+        padding-top: 10px;
     }
+
     .contact-small .contact-small-container {
-        gap:20px;
+        gap: 20px;
+    }
+
+    .contact-small .contact-small-container a {
+        font-size: 16px;
     }
 }
